--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">微信自动发送消息</string>
-    <string name="accessibility_description">用于自动发送微信消息</string>
+    <string name="app_name">微信机器人</string>
+    <string name="accessibility_description">用于扩展微信各种功能</string>
 </resources>
